--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           flag = !flag;
         } else {
           havingChild = window.prompt(
-            "Please enter Y if you have member to join or Enter N !!!...."
+            "Please Enter Y if you have member to join or Enter N !!!...."
           );
         }
         if (havingChild == "Y" || havingChild == "y") {
@@ -68,6 +68,9 @@
           let totalMembers = document.createElement("h1");
           totalMembers.textContent = "Total Members = 1";
           body.appendChild(totalMembers);
+          let commDet = document.createElement('h1');
+          commDet.textContent = 'COMMISSION DETAILS :-';
+          body.appendChild(commDet);
           let displayParent = document.createElement("h1");
           let parentProfit = (amount * 5) / 100;
           displayParent.textContent =
@@ -78,6 +81,9 @@
           let members = 1;
           let totalMembers = document.createElement("h1");
           body.appendChild(totalMembers);
+          let commDet = document.createElement('h1');
+          commDet.textContent = 'COMMISSION DETAILS :-';
+          body.appendChild(commDet);
           let displayParent = document.createElement("h1");
           body.appendChild(displayParent);
           let parentProfit = childArr.reduce((res, current) => {
